--- a/Leccion3/sga-jee-web/src/main/webapp/index.html
+++ b/Leccion3/sga-jee-web/src/main/webapp/index.html
@@ -5,6 +5,9 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
+        
         <a href="persona">Ir al listado de personas</a>
+        <a href="usuario">Ir al listado de usuario</a>
+        
     </body>
 </html>
