aplicacion web con jsf mas primefaces part2

--- a/Leccion9/sga-jee-web/src/main/webapp/index.xhtml
+++ b/Leccion9/sga-jee-web/src/main/webapp/index.xhtml
@@ -11,7 +11,7 @@
     <h:body>
         <h2>Sistema SGA</h2>
         <h:form>
-            <h:commandButton value="Listar Personas" action="listadoPersonas"/>
+            <h:commandButton value="Listar Personas" action="listarPersonas"/>
         </h:form>
     </h:body>
 </html>
